update readme, description and data files. add sessioninfo to app.R. Multiple code re-writes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Title: Shiny Leaflet Choropleth
+Title: Shiny Leaflet Choropleth (version 5)
 Author: Mashoedoe.
 AuthorUrl: http://www.mashoedoe.com/
 License: MIT license
